syntax = "proto3";

import "tensorflow_serving/servables/caffe/caffe_session_bundle_config.proto";

package tensorflow.serving;

// Config proto for SessionBundleSourceAdapter.
message CaffeSourceAdapterConfig {
  CaffeSessionBundleConfig config = 1;
}